--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <style>
   .cell {
     display: inline-block;
-    width: 1rem;
-    height: 1rem;
+    width: 10px;
+    height: 10px;
   }
 
   .cell--alive {
