--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+  }
+
+  #board {
+    border: 1px solid white;
+    display: block;
+  }
+
   .cell {
     display: inline-block;
     width: 10px;
@@ -6,7 +22,7 @@
   }
 
   .cell--alive {
-    background-color: black;
+    background-color: white;
   }
 </style>
 <div id="board"></div>
